Add temperature to linechart